# Kennan

./: README.md  administrators.c  administrators.h  login_menus.c  login_menus.h  logistics.c  main.c  manager.c  manager.h
bank/bank/client/cmake/: CMakeLists.txt
bank/bank/client/src/: bank.h  client.c  client_logon.c  client_logon.h
bank/bank/server/acc/: .bank.data  2022091510  412703  77570793
bank/bank/server/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  create  destroy  login  modify  query  save  server  take  transf  unlock
bank/bank/server/cmake/: CMakeLists.txt
bank/bank/server/src/: create.c  destroy.c  login.c  modify.c  query.c  server.c  transf.c  unlock.c
bank/base/: readme.md
bank/base/include/: msg_queue.h  sort.h  tools.h  tree.h
bank/base/src/dsa/: list.c  list.h  queue.h  stack.c  tree.c
bank/base/src/dsa/cmake/: CMakeLists.txt
bank/base/src/json/cmake/: CMakeLists.txt
bank/base/src/md5/: md5.c  md5.h
bank/base/src/msg/cmake/: CMakeLists.txt
bank/base/src/test/: list_test.c  sort_test.c  tools_test.c
bank/base/src/tools/: tools.c
bank_v3/bank/client/cmake/: CMakeLists.txt
bank_v3/bank/client/src/: bank.h  client.c  client_logon.c  client_logon.h
bank_v3/bank/server/acc/: .bank.data  1101  aassad
bank_v3/bank/server/cmake/: CMakeLists.txt
bank_v3/bank/server/src/: bank.h  create.c  create_oper.c  destroy.c  login.c  modify.c  server  server.c  transf.c  unlock.c
bank_v3/base/src/: CMakeLists.txt
bank_v3/base/src/dsa/: query.c  sort.c  stack.h
bank_v3/base/src/msg/: msg_queue.c
bank_v3/base/src/test/: md5_test.c  tree_test.c
bank_v3/base/src/test/cmake/: CMakeLists.txt
bank_v3/base/src/tools/cmake/: CMakeLists.txt
gam2048_client/: Makefile.win  game2048.c  game2048.h  game2048_client.dev  game2048_client.layout  game2048_tools.c  game2048_tools.h  main.c
onvif_with_soap/discovery/: Demo  Makefile  SearchBinding.nsmap  devicemgmt.wsdl  dom.c  main.c  media.wsdl  onvif.h  onvif.xsd  onvif_comm.c  onvif_comm.h  soapC.c  soapClient.c  soapClientLib.c  soapH.h  soapServer.c  soapServerLib.c  soapStub.h  soapcpp2  stdsoap2.c  wsdd.nsmap  wsseapi.c
onvif_with_soap/discovery/Bulid/: CMakeCache.txt  Demo  Makefile  cmake_install.cmake
onvif_with_soap/discovery/cmake/: CMakeLists.txt
onvif_without_soap/src/src/: main.c  onvif_curl.c  onvif_tools.h
pthreadpool/: a.out  pthreadpool.c  pthreadpool.h  tcp_server.c
yt_onvif/: Makefile
yt_onvif/src/: CMakeLists.txt
yt_onvif/src/src/: onvif_capabilities.c  onvif_capabilities.h  onvif_curl.h  onvif_encode.c  onvif_encode.h  onvif_tools.c
图书馆管理系统/: .goutputstream-KS6KR1  .goutputstream-W8K7Q1  199200311.txt  199200322.txt  Makefile  admin_system.c  library  librarystu  main.c  mainstu.c  market  operator_system.c  operator_system.h  student_system.c  student_system.h  test.c  timer.c  timer.h  tools.c  tools.h
图书馆管理系统/client/: add.c  add.h  client.c
图书馆管理系统/server/: add.c  add.h  admin_system.c  admin_system.h  server.c
服务器监控/: readmd.md
服务器监控/base/include/: monitor.h  tcp_socket.h
服务器监控/base/src/: CMakeLists.txt
服务器监控/base/src/dsa/: list.c  list.h  query.h  queue.c
服务器监控/base/src/json/: cJSON.c  cJSON.h
服务器监控/base/src/log/: log.c  log.h
服务器监控/base/src/log/cmake/: CMakeLists.txt
服务器监控/base/src/md5/: md5.c  md5.h
服务器监控/base/src/md5/cmake/: CMakeLists.txt
服务器监控/base/src/monitor/: monitor.c  monitor_main.c  monitored.c  monitored.h
服务器监控/base/src/monitor/cmake/: CMakeLists.txt
服务器监控/base/src/pool/: readme.md  threadpool.c  threadpool.h
服务器监控/base/src/pool/cmake/: CMakeLists.txt
服务器监控/base/src/socket/: tcp_socket.c  udp_socket.c  udp_socket.h
服务器监控/base/src/socket/cmake/: CMakeLists.txt
服务器监控/base/src/tools/: tools.c  tools.h
服务器监控/查看者/: viewers  viewers.c
服务器监控/监控者/: monitor  monitor_main.c
服务器监控/监控者/log/: client_cnt
服务器监控/被监控者/client/: client  client.c  core
服务器监控/被监控者/server/: server  server.c
超市管理系统/: Makefile  logistics.h  sale.c  sale.h  score.c  score.h  tools.c  tools.h
